--- a/PBL6/Application/ViewControllers/Profile/ProfileVC.xib
+++ b/PBL6/Application/ViewControllers/Profile/ProfileVC.xib
@@ -140,7 +140,7 @@
                                             <color key="textColor" red="0.1215686275" green="0.16078431369999999" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                             <userDefinedRuntimeAttributes>
-                                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="email"/>
+                                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="email_info"/>
                                             </userDefinedRuntimeAttributes>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="phường Bình Hiên, quận Hải Châu, thành phố Đà Nẵng" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QAC-r1-OG8">
