--- a/PBL6/Application/ViewControllers/Profile/ProfileVC.xib
+++ b/PBL6/Application/ViewControllers/Profile/ProfileVC.xib
@@ -18,6 +18,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileVC" customModule="PBL6" customModuleProvider="target">
             <connections>
                 <outlet property="addressLabel" destination="IZ3-sX-ETL" id="ONh-Je-Aln"/>
+                <outlet property="avtImageView" destination="R7z-ug-N8T" id="KNB-Aa-SMe"/>
                 <outlet property="backButton" destination="qpi-DB-OgL" id="noV-gW-Lpy"/>
                 <outlet property="citizenIDLabel" destination="ih1-eL-6LF" id="Sdc-yR-nEB"/>
                 <outlet property="classLabel" destination="K57-nJ-0bZ" id="Ila-09-aiE"/>
@@ -28,6 +29,7 @@
                 <outlet property="genderLabel" destination="ziO-tE-1aU" id="3vc-WR-88S"/>
                 <outlet property="homeTownLabel" destination="51i-aO-E8s" id="vKU-NF-Aon"/>
                 <outlet property="middleView" destination="PGk-0z-9WZ" id="ThI-8B-jPV"/>
+                <outlet property="nameLabel" destination="ggW-f9-iaz" id="CCh-y2-ZDR"/>
                 <outlet property="parentMiddleView" destination="PLl-K6-GSs" id="K3J-7v-Jib"/>
                 <outlet property="parentTopview" destination="kkf-Dk-jAj" id="1Mf-Z2-Tgz"/>
                 <outlet property="phoneNumberLabel" destination="Uve-Ah-lFh" id="sR6-jG-1vh"/>
@@ -75,7 +77,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tdp-mY-GsN">
-                            <rect key="frame" x="0.0" y="524" width="414" height="294"/>
+                            <rect key="frame" x="0.0" y="524" width="414" height="338"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kgJ-9f-He5">
                                     <rect key="frame" x="24" y="23.999999999999996" width="366" height="43.666666666666657"/>
@@ -363,12 +365,17 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vwY-SO-EMd">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="220"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_avt_default" translatesAutoresizingMaskIntoConstraints="NO" id="R7z-ug-N8T">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_avt_default" translatesAutoresizingMaskIntoConstraints="NO" id="R7z-ug-N8T">
                                             <rect key="frame" x="147" y="30" width="120" height="120"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="120" id="HcH-2N-Jgq"/>
                                                 <constraint firstAttribute="width" constant="120" id="iH5-2C-k2w"/>
                                             </constraints>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                    <real key="value" value="60"/>
+                                                </userDefinedRuntimeAttribute>
+                                            </userDefinedRuntimeAttributes>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Đỗ Thị Tề" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ggW-f9-iaz">
                                             <rect key="frame" x="162.33333333333334" y="166" width="89.666666666666657" height="27.333333333333343"/>
@@ -407,9 +414,9 @@
                         <constraint firstItem="Tdp-mY-GsN" firstAttribute="leading" secondItem="5dX-zd-4Mf" secondAttribute="leading" id="5SR-hT-oTa"/>
                         <constraint firstItem="Tdp-mY-GsN" firstAttribute="top" secondItem="PLl-K6-GSs" secondAttribute="bottom" constant="-10" id="8PF-Rz-w2H"/>
                         <constraint firstItem="51i-aO-E8s" firstAttribute="leading" secondItem="k7t-lG-cf3" secondAttribute="leading" id="9wK-Di-Jhw"/>
+                        <constraint firstAttribute="bottom" secondItem="Tdp-mY-GsN" secondAttribute="bottom" constant="-44" id="Emt-QW-OD4"/>
                         <constraint firstAttribute="trailing" secondItem="wwn-HJ-Sh0" secondAttribute="trailing" id="Fuv-DC-baN"/>
                         <constraint firstItem="kkf-Dk-jAj" firstAttribute="leading" secondItem="5dX-zd-4Mf" secondAttribute="leading" id="Ij8-Id-ySQ"/>
-                        <constraint firstAttribute="bottom" secondItem="Tdp-mY-GsN" secondAttribute="bottom" id="MfI-my-Uxy"/>
                         <constraint firstAttribute="trailing" secondItem="PLl-K6-GSs" secondAttribute="trailing" id="Mqs-pM-Ln7"/>
                         <constraint firstAttribute="trailing" secondItem="kkf-Dk-jAj" secondAttribute="trailing" id="U1k-48-F82"/>
                         <constraint firstItem="x08-oA-enB" firstAttribute="leading" secondItem="AL9-sZ-4V9" secondAttribute="leading" id="arh-HF-l0z"/>
