--- a/PBL6/Application/ViewControllers/Profile/ProfileVC.xib
+++ b/PBL6/Application/ViewControllers/Profile/ProfileVC.xib
@@ -23,6 +23,7 @@
                 <outlet property="citizenIDLabel" destination="ih1-eL-6LF" id="Sdc-yR-nEB"/>
                 <outlet property="classLabel" destination="K57-nJ-0bZ" id="Ila-09-aiE"/>
                 <outlet property="dateOfBirthLabel" destination="W1K-yo-szb" id="h3Y-Jq-Edw"/>
+                <outlet property="editButton" destination="KA3-4v-4YJ" id="kYJ-oc-fwP"/>
                 <outlet property="educationalSystemLabel" destination="eeH-Uu-lhe" id="NJr-75-1Ha"/>
                 <outlet property="emailLabel" destination="QAC-r1-OG8" id="xjt-zI-bUn"/>
                 <outlet property="facultyLabel" destination="H9f-Or-vLF" id="Ntr-Oe-lb1"/>
@@ -77,10 +78,10 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tdp-mY-GsN">
-                            <rect key="frame" x="0.0" y="524" width="414" height="338"/>
+                            <rect key="frame" x="0.0" y="504" width="414" height="358"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kgJ-9f-He5">
-                                    <rect key="frame" x="24" y="23.999999999999996" width="366" height="43.666666666666657"/>
+                                    <rect key="frame" x="24" y="44" width="366" height="43.666666666666657"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x08-oA-enB">
                                             <rect key="frame" x="0.0" y="11" width="41.666666666666664" height="22"/>
@@ -107,7 +108,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zjD-AU-Ah6">
-                                    <rect key="frame" x="24" y="75.666666666666629" width="366" height="43.666666666666657"/>
+                                    <rect key="frame" x="24" y="95.666666666666629" width="366" height="43.666666666666657"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FMh-ks-JfO">
                                             <rect key="frame" x="0.0" y="11" width="41.666666666666664" height="22"/>
@@ -134,7 +135,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xls-vq-jTd">
-                                    <rect key="frame" x="24" y="127.33333333333339" width="366" height="43.6666666666667"/>
+                                    <rect key="frame" x="24" y="147.33333333333337" width="366" height="43.666666666666657"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CKu-cp-iWQ">
                                             <rect key="frame" x="0.0" y="11" width="41.666666666666664" height="22"/>
@@ -161,7 +162,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dIh-tX-FNO">
-                                    <rect key="frame" x="24" y="179" width="366" height="22"/>
+                                    <rect key="frame" x="24" y="199" width="366" height="22"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Di-fG-eGG">
                                             <rect key="frame" x="0.0" y="0.0" width="41.666666666666664" height="22"/>
@@ -205,7 +206,7 @@
                                 <constraint firstItem="xls-vq-jTd" firstAttribute="top" secondItem="zjD-AU-Ah6" secondAttribute="bottom" constant="8" id="jQ7-XV-4Eb"/>
                                 <constraint firstItem="Uve-Ah-lFh" firstAttribute="leading" secondItem="QAC-r1-OG8" secondAttribute="leading" id="lgI-ov-u19"/>
                                 <constraint firstItem="dIh-tX-FNO" firstAttribute="leading" secondItem="Tdp-mY-GsN" secondAttribute="leading" constant="24" id="li0-bk-FWi"/>
-                                <constraint firstItem="kgJ-9f-He5" firstAttribute="top" secondItem="Tdp-mY-GsN" secondAttribute="top" constant="24" id="qRM-5P-9Ey"/>
+                                <constraint firstItem="kgJ-9f-He5" firstAttribute="top" secondItem="Tdp-mY-GsN" secondAttribute="top" constant="44" id="qRM-5P-9Ey"/>
                                 <constraint firstItem="kgJ-9f-He5" firstAttribute="leading" secondItem="Tdp-mY-GsN" secondAttribute="leading" constant="24" id="ty9-Yg-JVx"/>
                                 <constraint firstAttribute="trailing" secondItem="zjD-AU-Ah6" secondAttribute="trailing" constant="24" id="uai-qP-KfK"/>
                             </constraints>
@@ -375,6 +376,12 @@
                                                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                     <real key="value" value="60"/>
                                                 </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                    <color key="value" red="0.098039215686274508" green="0.36862745098039218" blue="0.55686274509803924" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                    <real key="value" value="1"/>
+                                                </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Đỗ Thị Tề" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ggW-f9-iaz">
@@ -412,7 +419,7 @@
                     <constraints>
                         <constraint firstItem="wwn-HJ-Sh0" firstAttribute="leading" secondItem="5dX-zd-4Mf" secondAttribute="leading" id="0MZ-8C-roj"/>
                         <constraint firstItem="Tdp-mY-GsN" firstAttribute="leading" secondItem="5dX-zd-4Mf" secondAttribute="leading" id="5SR-hT-oTa"/>
-                        <constraint firstItem="Tdp-mY-GsN" firstAttribute="top" secondItem="PLl-K6-GSs" secondAttribute="bottom" constant="-10" id="8PF-Rz-w2H"/>
+                        <constraint firstItem="Tdp-mY-GsN" firstAttribute="top" secondItem="PLl-K6-GSs" secondAttribute="bottom" constant="-30" id="8PF-Rz-w2H"/>
                         <constraint firstItem="51i-aO-E8s" firstAttribute="leading" secondItem="k7t-lG-cf3" secondAttribute="leading" id="9wK-Di-Jhw"/>
                         <constraint firstAttribute="bottom" secondItem="Tdp-mY-GsN" secondAttribute="bottom" constant="-44" id="Emt-QW-OD4"/>
                         <constraint firstAttribute="trailing" secondItem="wwn-HJ-Sh0" secondAttribute="trailing" id="Fuv-DC-baN"/>
