fix(auth, ui): handle error Student:000006, fix UI

--- a/PBL6/Application/ViewControllers/ForgotPassword/ForgotPasswordVC.xib
+++ b/PBL6/Application/ViewControllers/ForgotPassword/ForgotPasswordVC.xib
@@ -70,7 +70,7 @@
                                 <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="forgot_password_description"/>
                             </userDefinedRuntimeAttributes>
                         </label>
-                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bEg-bk-vT4">
+                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email hoặc mã sinh viên" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bEg-bk-vT4">
                             <rect key="frame" x="24" y="285.66666666666669" width="366" height="56"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="56" id="KYI-QC-0FW"/>
@@ -113,7 +113,7 @@
                             <color key="textColor" systemColor="systemRedColor"/>
                             <nil key="highlightedColor"/>
                             <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="email_warning"/>
+                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="email_or_username_warning"/>
                             </userDefinedRuntimeAttributes>
                         </label>
                     </subviews>
