--- a/PBL6/Application/ViewControllers/EditProfile/EditProfileVC.xib
+++ b/PBL6/Application/ViewControllers/EditProfile/EditProfileVC.xib
@@ -180,7 +180,7 @@
                                                         <constraint firstAttribute="height" constant="48" id="fhF-ih-cHF"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
+                                                    <textInputTraits key="textInputTraits" textContentType="email"/>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                             <real key="value" value="12"/>
@@ -222,7 +222,7 @@
                                                         <constraint firstAttribute="height" constant="48" id="ai0-Ek-4fp"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
+                                                    <textInputTraits key="textInputTraits" textContentType="tel"/>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                             <real key="value" value="12"/>
@@ -363,7 +363,7 @@
         <image name="ic_close" width="24" height="24"/>
         <image name="img_avt_default" width="120" height="120"/>
         <namedColor name="Accent Dark Green">
-            <color red="0.015686274509803921" green="0.57647058823529407" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.016000000759959221" green="0.57599997520446777" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="White">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
