--- a/PBL6/Application/ViewControllers/Home/Cell/EventItemCell.xib
+++ b/PBL6/Application/ViewControllers/Home/Cell/EventItemCell.xib
@@ -18,11 +18,7 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner">
-            <connections>
-                <outlet property="eventImage" destination="xAf-oq-UiV" id="nvH-Kr-VKs"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="EventItemCell" customModule="PBL6" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="260" height="256"/>
@@ -57,10 +53,10 @@
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="M1v-5N-NCh">
-                                        <rect key="frame" x="12" y="37" width="236" height="42"/>
+                                        <rect key="frame" x="12" y="37" width="236" height="41.333333333333343"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UCc-vD-YK0">
-                                                <rect key="frame" x="0.0" y="0.0" width="236" height="17"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="236" height="16.666666666666668"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thời gian" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c3u-3T-amE">
                                                         <rect key="frame" x="0.0" y="0.0" width="51.333333333333336" height="16.666666666666668"/>
@@ -68,8 +64,8 @@
                                                         <color key="textColor" name="Grey Shade"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20/10/2023" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="faK-in-Pvj">
-                                                        <rect key="frame" x="172" y="0.0" width="64" height="16.666666666666668"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20/10/2023" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="faK-in-Pvj">
+                                                        <rect key="frame" x="70.666666666666671" y="0.0" width="165.33333333333331" height="16.666666666666668"/>
                                                         <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="12"/>
                                                         <color key="textColor" name="Grey Shade"/>
                                                         <nil key="highlightedColor"/>
@@ -77,15 +73,14 @@
                                                 </subviews>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="trailing" secondItem="faK-in-Pvj" secondAttribute="trailing" id="07I-x9-tnA"/>
-                                                    <constraint firstItem="faK-in-Pvj" firstAttribute="centerY" secondItem="UCc-vD-YK0" secondAttribute="centerY" id="44B-GF-IWN"/>
-                                                    <constraint firstAttribute="height" constant="17" id="NnE-dd-OQe"/>
-                                                    <constraint firstItem="c3u-3T-amE" firstAttribute="centerY" secondItem="UCc-vD-YK0" secondAttribute="centerY" id="hIm-5Y-r8A"/>
-                                                    <constraint firstItem="c3u-3T-amE" firstAttribute="leading" secondItem="UCc-vD-YK0" secondAttribute="leading" id="vO4-tw-4Ty"/>
+                                                    <constraint firstItem="c3u-3T-amE" firstAttribute="leading" secondItem="UCc-vD-YK0" secondAttribute="leading" id="3ev-JI-4Ex"/>
+                                                    <constraint firstItem="faK-in-Pvj" firstAttribute="centerY" secondItem="UCc-vD-YK0" secondAttribute="centerY" id="9tZ-qi-kpi"/>
+                                                    <constraint firstAttribute="trailing" secondItem="faK-in-Pvj" secondAttribute="trailing" id="GZ2-qL-4R5"/>
+                                                    <constraint firstItem="c3u-3T-amE" firstAttribute="centerY" secondItem="UCc-vD-YK0" secondAttribute="centerY" id="zUt-Td-DWZ"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Smc-QY-088">
-                                                <rect key="frame" x="0.0" y="25" width="236" height="17"/>
+                                                <rect key="frame" x="0.0" y="24.666666666666686" width="236" height="16.666666666666671"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Địa điểm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yfn-ZT-hOA">
                                                         <rect key="frame" x="0.0" y="0.0" width="50" height="16.666666666666668"/>
@@ -93,8 +88,8 @@
                                                         <color key="textColor" name="Grey Shade"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Đà Nẵng" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XYZ-ke-jk3">
-                                                        <rect key="frame" x="187.66666666666666" y="0.0" width="48.333333333333343" height="16.666666666666668"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Đà Nẵng" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XYZ-ke-jk3">
+                                                        <rect key="frame" x="70.666666666666671" y="0.0" width="165.33333333333331" height="16.666666666666668"/>
                                                         <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="12"/>
                                                         <color key="textColor" name="Grey Shade"/>
                                                         <nil key="highlightedColor"/>
@@ -102,26 +97,30 @@
                                                 </subviews>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="trailing" secondItem="XYZ-ke-jk3" secondAttribute="trailing" id="b3v-0L-KaH"/>
-                                                    <constraint firstItem="yfn-ZT-hOA" firstAttribute="leading" secondItem="Smc-QY-088" secondAttribute="leading" id="i7I-cs-KM2"/>
-                                                    <constraint firstItem="XYZ-ke-jk3" firstAttribute="centerY" secondItem="Smc-QY-088" secondAttribute="centerY" id="smh-k5-AUg"/>
-                                                    <constraint firstItem="yfn-ZT-hOA" firstAttribute="centerY" secondItem="Smc-QY-088" secondAttribute="centerY" id="wqu-Rm-6kB"/>
+                                                    <constraint firstItem="yfn-ZT-hOA" firstAttribute="leading" secondItem="Smc-QY-088" secondAttribute="leading" id="GWA-5v-uet"/>
+                                                    <constraint firstAttribute="trailing" secondItem="XYZ-ke-jk3" secondAttribute="trailing" id="Sc4-f1-iMO"/>
+                                                    <constraint firstItem="XYZ-ke-jk3" firstAttribute="width" secondItem="Smc-QY-088" secondAttribute="width" multiplier="0.7" id="c7h-9h-fPL"/>
+                                                    <constraint firstItem="yfn-ZT-hOA" firstAttribute="centerY" secondItem="Smc-QY-088" secondAttribute="centerY" id="uMZ-8u-Gq1"/>
+                                                    <constraint firstItem="XYZ-ke-jk3" firstAttribute="centerY" secondItem="Smc-QY-088" secondAttribute="centerY" id="z4t-vN-Don"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstItem="faK-in-Pvj" firstAttribute="width" secondItem="XYZ-ke-jk3" secondAttribute="width" id="iO4-Gg-wL5"/>
+                                        </constraints>
                                     </stackView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="M1v-5N-NCh" secondAttribute="bottom" constant="15.33" id="3tF-SZ-nyi"/>
-                                    <constraint firstItem="M1v-5N-NCh" firstAttribute="top" secondItem="Cd1-Td-Jrg" secondAttribute="bottom" constant="8" id="4Z4-hF-buj"/>
-                                    <constraint firstAttribute="trailing" secondItem="M1v-5N-NCh" secondAttribute="trailing" constant="12" id="5bW-KY-TdR"/>
-                                    <constraint firstItem="Cd1-Td-Jrg" firstAttribute="leading" secondItem="YRo-n6-eKE" secondAttribute="leading" constant="12" id="7d0-Ql-Yu7"/>
-                                    <constraint firstItem="z33-sN-mDl" firstAttribute="leading" secondItem="YRo-n6-eKE" secondAttribute="leading" constant="12" id="I2w-uq-RDu"/>
-                                    <constraint firstAttribute="trailing" secondItem="Cd1-Td-Jrg" secondAttribute="trailing" constant="12" id="WcA-x4-KFI"/>
-                                    <constraint firstItem="M1v-5N-NCh" firstAttribute="leading" secondItem="YRo-n6-eKE" secondAttribute="leading" constant="12" id="anA-3Y-IP8"/>
-                                    <constraint firstItem="Cd1-Td-Jrg" firstAttribute="top" secondItem="z33-sN-mDl" secondAttribute="bottom" constant="8" id="b40-fC-OYo"/>
-                                    <constraint firstItem="z33-sN-mDl" firstAttribute="top" secondItem="YRo-n6-eKE" secondAttribute="top" id="csC-WP-Iym"/>
+                                    <constraint firstAttribute="bottom" secondItem="M1v-5N-NCh" secondAttribute="bottom" constant="16" id="1h0-zK-wBC"/>
+                                    <constraint firstItem="Cd1-Td-Jrg" firstAttribute="top" secondItem="z33-sN-mDl" secondAttribute="bottom" constant="8" id="KVX-i0-buy"/>
+                                    <constraint firstItem="M1v-5N-NCh" firstAttribute="leading" secondItem="YRo-n6-eKE" secondAttribute="leading" constant="12" id="MiL-ng-aRW"/>
+                                    <constraint firstItem="M1v-5N-NCh" firstAttribute="top" secondItem="Cd1-Td-Jrg" secondAttribute="bottom" constant="8" id="N2x-TG-VHM"/>
+                                    <constraint firstItem="z33-sN-mDl" firstAttribute="leading" secondItem="YRo-n6-eKE" secondAttribute="leading" constant="12" id="NE1-wB-XJc"/>
+                                    <constraint firstAttribute="trailing" secondItem="Cd1-Td-Jrg" secondAttribute="trailing" constant="12" id="r9z-sL-BZk"/>
+                                    <constraint firstItem="z33-sN-mDl" firstAttribute="top" secondItem="YRo-n6-eKE" secondAttribute="top" id="sAR-OX-IEv"/>
+                                    <constraint firstItem="Cd1-Td-Jrg" firstAttribute="leading" secondItem="YRo-n6-eKE" secondAttribute="leading" constant="12" id="txy-Kd-AOT"/>
+                                    <constraint firstAttribute="trailing" secondItem="M1v-5N-NCh" secondAttribute="trailing" constant="12" id="vYd-dS-Jvw"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -136,6 +135,17 @@
                             <constraint firstItem="xAf-oq-UiV" firstAttribute="top" secondItem="sjO-wJ-aEd" secondAttribute="top" id="nAF-R5-nTR"/>
                             <constraint firstItem="YRo-n6-eKE" firstAttribute="top" secondItem="xAf-oq-UiV" secondAttribute="bottom" constant="8" id="sTI-wT-VNM"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="12"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                <color key="value" red="0.14901960784313725" green="0.77647058823529413" blue="0.85490196078431369" alpha="0.19532812297104266" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                <real key="value" value="2"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </view>
                 </subviews>
             </view>
